--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -89,13 +89,9 @@
             <h1>O nas</h1>
             <span class="separator"></span>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-              viverra luctus ipsum, ut molestie purus tincidunt nec. Suspendisse
-              suscipit diam ut congue pellentesque. Vestibulum vestibulum ac
-              enim eu lacinia. Donec ut lacinia mi. Aenean mattis quam non
-              accumsan hendrerit. Cras ac dolor gravida, commodo arcu quis,
-              accumsan massa. Fusce metus nisl, suscipit ut ultricies sit amet,
-              consectetur vel eros.
+              Nauczymy Cię, jak wychować Twojego psa – od szczeniaka po dorosłego – z poszanowaniem jego naturalnych instynktów. Dzięki naszym wskazówkom Twój pies stanie się wspaniałym towarzyszem, który przyniesie Ci radość i spokój na co dzień, oraz będzie idealnym kompanem na wycieczkach i podczas zabawy. Jeśli Twój czworonożny przyjaciel sprawia kłopoty, na przykład jest nadmiernie pobudliwy, agresywny lub wykazuje inne trudne zachowania, pomożemy Ci skutecznie je rozwiązać.
+
+              Marzysz o tym, by zostać profesjonalnym trenerem lub behawiorystą? Sprawdź nasze kursy zawodowe, które pozwolą Ci połączyć pasję z profesjonalizmem
             </p>
           </div>
           <div class="col-md-6">
