--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -2,6 +2,9 @@
 * {
     margin: 0;
     padding: 0;
+    --background-accent-color:#dc7d3e;
+    --website-font-family: 'Poppins', sans-serif;
+    --website-font-size: 16px;
   }
   
   html {
@@ -11,23 +14,24 @@
   
   body {
     height: 200vh;
+    font-family: var(--website-font-family);
   }
-  
-  h1, h2, h3, h4, h5, h6, .display-1, .display-2, .display-3, .display-4, .display-5, .display-6, .navbar-brand {
-    font-family: 'Courier New', Courier, monospace, cursive;
+  a:hover {
+    color:var(--background-accent-color) !important;
   }
   
   #nav-container {
     z-index: 5;
     background-color: #ffffff;
-
   }
   
   .navbar-nav .nav-item {
     transition: all 0.2s ease-in-out;
+    font-weight: 500;
   }
+
   .navbar-nav .nav-item .nav-link {
-    color: #000 !important;
+    color: #000;
   }
   .navbar-nav .nav-item.active {
     border-bottom: 2px solid #000;
@@ -48,14 +52,17 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    margin-bottom: 5rem;
   }
   
   .landing-text-container {
-    margin-top: 15rem;
+    margin-top: 10rem;
+    margin-bottom: 5rem;
+
     padding: 2rem;
     /* background-color: rgba(255, 255, 255, 0.815); */
     float:left;
-    width: auto;
+    min-width: 768px;
     border-radius: 5px;
     box-shadow: inset 2px 0px 45px -10px rgb(66, 68, 90);
   }
