--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -49,19 +49,19 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#about">Społeczność</a>
+              <a class="nav-link" href="#about">SPOŁECZNOŚĆ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#advantages">Szkolenia</a>
+              <a class="nav-link" href="#advantages">SZKOLENIA</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#mission">Blog</a>
+              <a class="nav-link" href="#mission">BLOG</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#map">Kontakt</a>
+              <a class="nav-link" href="#map">KONTAKT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#footer">Klub</a>
+              <a class="nav-link" href="#footer">KLUB</a>
             </li>
           </ul>
         </div>
@@ -72,11 +72,10 @@
       <div class="container text-center landing">
         <div class="row">
           <div
-            class="col-md-5 offset-3 text-left landing-text-container text-center"
+            class="col-md-8 offset-0 text-left landing-text-container text-left"
           >
-            <h4 class="mb-0 display-3 font-weight-bold">Kursy i Szkolenia Psów i ich Ludzi</h4>
-            <h1 class="display-5">Od 2007 roku pomagamy psom i ich opiekunom, takim jak Ty dogadać się, rozwiązać problemy i prowadzić szczęśliwe życie</h1>
-            <p class="my-3 text-center">Też to umiesz</p>
+            <h2 class="mb-0 display-4 font-weight-bold">Kursy i Szkolenia<br> Psów i ich Ludzi</h4>
+            <h5 class="display-5">Od 2007 roku pomagamy psom i ich opiekunom, takim jak Ty dogadać się, rozwiązać problemy i prowadzić szczęśliwe życie</h1>
           </div>
         </div>
       </div>
