--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -26,6 +26,7 @@
     background-color: #ffffff;
     position: fixed;
     height:10%;
+    min-height:90px;
     width:100%;
     border:blue solid 2px;
     margin-top: 0;
@@ -101,16 +102,36 @@
   .hero-button:hover {
     text-decoration: none;
   }
+
+  .section-headline-small {
+    /* display:inline-block; */
+    text-align: center;
+    border:solid 2px orange;
+    font-family: "Monospace";
+    font-size:1.25rem;
+    color:#ec660d;
+    font-weight:600;
+    /* margin:0 auto; */
+    /* margin-left:100%; */
+  }
+
+  .section-headline-large {
+    text-align: center;
+    border:solid 2px cyan;
+    font-weight: 600;
+  }
   
   .about-left-col {
     align-items: center;
   }
-  
-  .separator {
-    display: flex;
-    width: 120px;
-    border-top: 2px solid #000;
-    padding-bottom: 25px;
+
+  .about-text {
+    width:100%;
+    align-items:center;
+    justify-items:center;
+    text-align:center;
+    border:red 2px solid;
+    margin:auto 0;
   }
   
   .about-img-container img {
