--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -90,21 +90,25 @@
 
     <section id="about">
       <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h5 class="">Szkolenia online</h5>
-            <h1>Wesoła Łapka</h1>
-            <span class="separator"></span>
-            <p>
-              Nauczymy Cię, jak wychować Twojego psa – od szczeniaka po dorosłego – z poszanowaniem jego naturalnych instynktów. Dzięki naszym wskazówkom Twój pies stanie się wspaniałym towarzyszem, który przyniesie Ci radość i spokój na co dzień, oraz będzie idealnym kompanem na wycieczkach i podczas zabawy. Jeśli Twój czworonożny przyjaciel sprawia kłopoty, na przykład jest nadmiernie pobudliwy, agresywny lub wykazuje inne trudne zachowania, pomożemy Ci skutecznie je rozwiązać.
+        <div class="xxx">
+          <div class="col-md-12">
+            <h5 class="section-headline-small">Szkolenia online</h5>
+            <h1 class="section-headline-large">Wesoła Łapka</h1>
+        
+            <p class="about-text">
+              
 
-              Marzysz o tym, by zostać profesjonalnym trenerem lub behawiorystą? Sprawdź nasze kursy zawodowe, które pozwolą Ci połączyć pasję z profesjonalizmem
+              Nauczymy Cię, jak wychować Twojego psa – od szczeniaka po dorosłego – z poszanowaniem <br> 
+              jego naturalnych instynktów. Dzięki naszym wskazówkom Twój pies stanie się wspaniałym <br>
+              towarzyszem, który przyniesie Ci radość i spokój na co dzień, oraz będzie idealnym <br>
+              kompanem na wycieczkach i podczas zabawy. Jeśli Twój czworonożny przyjaciel sprawia<br> 
+              kłopoty, na przykład jest nadmiernie pobudliwy, agresywny lub wykazuje inne <br> 
+              trudne zachowania, pomożemy Ci skutecznie je rozwiązać. <br>
+              <br>
+              Marzysz o tym, by zostać profesjonalnym trenerem lub behawiorystą? <br>
+              Sprawdź nasze kursy zawodowe, które pozwolą Ci połączyć pasję z profesjonalizmem.
+
             </p>
-          </div>
-          <div class="col-md-6">
-            <div class="about-img-container text-center">
-              <img class="img-fluid" src="./res/logo-2582748_640.png" />
-            </div>
           </div>
         </div>
       </div>
@@ -112,22 +116,19 @@
 
     <section id="clients">
       <div class="container">
-        <h1 class="text-center mt-4">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos modi natus beatae aliquid fuga velit non laborum, odio eaque rerum repudiandae cupiditate dolorum. Expedita earum vitae vero doloremque omnis quis.
-        </h1>
         <h5 class="text-center mb-4">
-          Poznaj naszych klientów:
+          Poznaj nasze kursy:
         </h5>
         <table class="table table-striped table-dark">
           <caption>
-            Nowi klienci
+            Najbliższy kurs
           </caption>
           <thead>
             <tr>
-              <th scope="col">Imię</th>
-              <th scope="col">Nazwisko</th>
+              <th scope="col">Nazwa kursu</th>
+              <th scope="col">Zakres</th>
               <th scope="col">Miejscowość</th>
-              <th scope="col">Nazwa firmy</th>
+              <th scope="col">Data</th>
             </tr>
           </thead>
           <tbody id="list"></tbody>
