--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -120,9 +120,6 @@
           Poznaj nasze kursy:
         </h5>
         <table class="table table-striped table-dark">
-          <caption>
-            Najbliższy kurs
-          </caption>
           <thead>
             <tr>
               <th scope="col">Nazwa kursu</th>
@@ -131,7 +128,20 @@
               <th scope="col">Data</th>
             </tr>
           </thead>
-          <tbody id="list"></tbody>
+          <tbody>
+            {% for course in courses %}
+            <tr>
+              <td>{{ course.name }}</td>
+              <td>{{ course.scope }}</td>
+              <td>{{ course.location }}</td>
+              <td>{{ course.date }}</td>
+            </tr>
+            {% empty %}
+            <tr>
+              <td colspan="4" class="text-center">Brak dostępnych kursów.</td>
+            </tr>
+            {% endfor %}
+          </tbody>
         </table>
       </div>
     </section>
