Updated getting started

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -147,74 +147,37 @@
     </section>
 
     <section id="advantages">
-      <div class="container">
-        <div class="mb-5 text-center">
-          <h1>Dlaczego powinieneś nas wybrać?</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-            quis<br />
-            quidem ducimus perferendis porro neque est beatae voluptates,
-            magnam, blanditiis quidem <br />
-            ducimus perferendis porro neque est beatae voluptates, magnam,
-            blanditiis
-          </p>
-        </div>
-
-        <div class="row justify-content-center">
-          <div class="card col-sm-4 my-2 mx-4 mx-md-0">
-            <img class="card-img-top" src="./res/page.svg" />
-            <div class="card-body">
-              <h5 class="card-title">Strona HTML 5</h5>
-              <p class="card-text">Responsywne strony</p>
-            </div>
+          <div class = "advantages-section-container">
+            <img class="advantages-website-logo" src="{% static 'core/res/wesola-lapka-logo-png.webp' %}" alt="Icon"/>
+            <h1>Dlaczego powinieneś nas wybrać?</h1>
+            <p>
+            Wesoła Łapka to nie tylko szkolenia i kursy online. <br>
+            Pomagamy kontaktować się z innymi właścicielami psów oraz udostępniać im różne informacje i materiały.<br>
+            </p>
           </div>
-
-          <div class="card col-sm-4">
-            <img class="card-img-top" src="./res/zarzadzanie.svg" />
-            <div class="card-body">
-              <h5 class="card-title">Zarządzanie</h5>
-              <p class="card-text">Dowiedz się jak zarządzać stroną</p>
-            </div>
-          </div>
-
-          <div class="card col-sm-4">
-            <img
-              class="card-img-top img-fluid mx-auto"
-              src="./res/tworcy.svg"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Twórcy</h5>
-              <p class="card-text">Aplikacje e-commerce</p>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <section id="mission" >
-      <div class="container text-light">
-        <div class="row">
+        <div id="mission-description" class="row">
           <div class="col text-center py-5 my-auto">
-            <h1>Nasza misja</h1>
+            <h5 id="mission-headline-small" class="section-headline-small">Szkolenia online</h5>
+            <h1>Zamień pasję w profesję</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-              nesciunt voluptatum deleniti nulla fuga, amet sequi ab fugit,
-              ipsum error incidunt optio voluptates cupiditate sint consectetur
-              quibusdam. Tempore, quas nulla. Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Totam nesciunt voluptatum deleniti
-              nulla fuga, amet sequi ab fugit, ipsum error incidunt optio
-              voluptates cupiditate sint consectetur quibusdam. Tempore, quas
-              nulla.
+              W Wesołej Łapce wierzymy, że dzięki stworzonym procedurom, talentowi oraz pracy, właściwie każdy człowiek jest w stanie nauczyć się pracy z psami. <br> 
+              Nasze kursy zostały stworzone właśnie po to, aby tę wiedzę i metodykę pracy przekazać Tobie. <br>
+            <p><strong>Marzysz o utrzymywaniu się z pracy z psami? Dowiedz się czego potrzebujesz, aby tak się stało.</strong> <br>
             </p>
             <div class="card mt-5">
               <i class="fa fa-thumbs-up fa-6x" aria-hidden="true"></i>
-
               <div class="card-body">
                 <h5 class="card-title">2137 ZADOWOLONYCH KLIENTÓW</h5>
                 <p class="card-text">Dołącz do nich!</p>
               </div>
             </div>
-          </div>
+
+        </div>
+        <div class="mission-image-container">
+          <img class="mission-image" src="{% static 'core/res/wesola-lapka-piknik.jpeg' %}" alt="Icon"/>
         </div>
       </div>
     </section>
