--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    --background-accent-color:#dc7d3e;
+    --background-accent-color:#ff821a;
     --website-font-family: 'Poppins', sans-serif;
     --website-font-size: 16px;
   }
@@ -45,7 +45,6 @@
   .navbar-nav .nav-item {
     transition: all 0.2s ease-in-out;
     font-weight: 600;
-    /* border:orange solid 2px; */
   }
 
   .navbar-nav .nav-item .nav-link {
@@ -78,6 +77,7 @@
     margin-bottom: 5rem;
     padding: 2rem;
     float:left;
+    width:100%;
     min-width: 768px;
     border-radius: 5px;
     border: solid purple 2px;
@@ -104,15 +104,12 @@
   }
 
   .section-headline-small {
-    /* display:inline-block; */
     text-align: center;
     border:solid 2px orange;
     font-family: "Monospace";
     font-size:1.25rem;
     color:#ec660d;
     font-weight:600;
-    /* margin:0 auto; */
-    /* margin-left:100%; */
   }
 
   .section-headline-large {
@@ -139,14 +136,36 @@
   }
   
   #advantages {
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    text-align:center;
     background-color: #f7f7f7;
+    border:magenta 2px solid;
     padding-bottom: 5rem;
     min-height: 600px;
     align-items: center;
-    margin-bottom: 0;
+    margin:auto auto;
+
   }
+
+  .advantages-website-logo {
+    width:20%;
+    max-width:240px
+  }
+
   #advantages .container {
     padding-top: 5rem;
+  }
+
+  .advantages-section-container {
+    display:flex;
+    flex-direction:column;
+    row-gap:1rem;
+    align-items:center;
+    border:red 2px solid;
+    align-items:center;
+    justify-content:center;
   }
   
   .card {
@@ -166,9 +185,35 @@
   }
   
   #mission {
+    display:flex;
+    flex-direction: inline;
     min-height: 450px;
     margin-bottom: 0;
-    background-color: #dc7d3e;
+    background-color: var(--background-accent-color);
+    border:solid 2px red;
+  }
+
+  #mission-description{
+    max-width:100%;
+    min-width:100%;
+    border:turquoise solid 4px;
+    color:white;
+    margin:auto;
+  }
+
+
+  .mission-image-container{
+    border:blue solid 4px;
+    background-image: url("core/res/wesola-lapka-piknik.jpeg");
+  }
+
+  .mission-container{
+    max-width:30%;
+  }
+
+
+  #mission-headline-small{
+    color:white;
   }
   
   .list-group, .list-group-item {
@@ -195,11 +240,11 @@
   }
   
   .table-dark {
-    background-color: #ec660d;
+    background-color: var(--background-accent-color);
   }
   
   .bottom-section {
-    background-color: #dc7d3e;
+    background-color: var(--background-accent-color);
   }
   
   @media only screen and (max-width: 768px) {
